day view for simple_booking

--- a/phpgwapi/js/pecalendar/index.html
+++ b/phpgwapi/js/pecalendar/index.html
@@ -65,7 +65,9 @@
 <body>
     <div class="over-ting">Over kalenderen</div>
     <div class="container">
-        <pe-calendar params="building_id: 10, resource_id: 125"/>
+<!--        <pe-calendar params="building_id: 10, resource_id: 125"/> &lt;!&ndash; Kultursalen &ndash;&gt;-->
+        <pe-calendar params="building_id: 46, resource_id: 452"/> <!-- TUBAKUBA -->
+
     </div>
     <div class="over-ting">Gammel</div>
 
