--- a/phpgwapi/js/pecalendar/index.html
+++ b/phpgwapi/js/pecalendar/index.html
@@ -65,8 +65,8 @@
 <body>
     <div class="over-ting">Over kalenderen</div>
     <div class="container">
-<!--        <pe-calendar params="building_id: 10, resource_id: 125"/> &lt;!&ndash; Kultursalen &ndash;&gt;-->
-        <pe-calendar params="building_id: 46, resource_id: 452"/> <!-- TUBAKUBA -->
+        <pe-calendar params="building_id: 10, resource_id: 125"/> <!-- Kultursalen -->
+<!--        <pe-calendar params="building_id: 46, resource_id: 452"/> &lt;!&ndash; TUBAKUBA &ndash;&gt;-->
 
     </div>
     <div class="over-ting">Gammel</div>
